# roman_numeral_converter_refactoring

./: .gitignore  CMakeInstallation.cmake  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake
include/: decoder_interface.h  encoder_interface.h  number_en-decoder.h  roman_numerals_version.h  validator_interface.h
include/roman_decoder/: decode.h
include/roman_encoder/: encode.h
include/roman_validator/: validator.h
lib/: CMakeLists.txt  decode.cpp  encode.cpp  validator.cpp
tests/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  validator_test.cpp
